objects/LiveChatTranscript.object
<CustomObject>
    <fields>
        <fullName>Channel_Name__c</fullName>
        <formula>&quot;Chat&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <formula>IMAGE(&quot;https://sdo-master.s3.us-west-1.amazonaws.com/icons/embeddedmessaging.png&quot;,&quot;22,22&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChatEndUserId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Live_Chat_Transcripts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ChatStartURL__c</fullName>
        <description>The page visited by the user prior to launching the chat session</description>
        <inlineHelpText>The last page visited by the user prior to launching the chat session</inlineHelpText>
        <label>Chat Start URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>This is used to consistently import data to a version of the SDO and translate data into other languages.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Order_Summary_Id__c</fullName>
        <label>Order Summary Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <formula>Case.Subject</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URLsrc__c</fullName>
        <formula>IF(CONTAINS($Api.Enterprise_Server_URL_290,&quot;.force.com&quot;), 
MID( $Api.Enterprise_Server_URL_290, FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;.force.com/&quot;, $Api.Enterprise_Server_URL_290, 0)), 
FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;.force.com/&quot;, $Api.Enterprise_Server_URL_290, 0))+1) - FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;.force.com/&quot;, $Api.Enterprise_Server_URL_290, 0)) 
) , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URLsrc</label>
        <type>Text</type>
    </fields>
    <sharingModel>Read</sharingModel>
</CustomObject>